fix after review

--- a/public/about.html
+++ b/public/about.html
@@ -9,8 +9,8 @@
 <body>
 <div>
     Это приложение позволяет создавать различные тесты
-    <a href='https://www.thinknetica.com'>Thinknetica</a>
-    <a href='author.html'>Об авторе</a>
+    <a target='_blank' href='https://www.thinknetica.com'>Thinknetica</a>
+    <a href='about/author.html'>Об авторе</a>
 </div>
 </body>
 </html>
